--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="favorite.html" class="nav-mobile__list-item"><i class="fa-solid fa-heart"></i>Favorite</a>
                     <a href="compare.html" class="nav-mobile__list-item"><i
                             class="fa-solid fa-not-equal"></i>Compare</a>
-                    <a href="#" class="nav-mobile__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
+                    <a href="edit.html" class="nav-mobile__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
                 </div>
             </nav>
         </div>
@@ -51,7 +51,7 @@
                     <a href="favorite.html" class="nav-desktop__list-item"><i class="fa-solid fa-heart"></i>Favorite</a>
                     <a href="compare.html" class="nav-desktop__list-item"><i
                             class="fa-solid fa-not-equal"></i>Compare</a>
-                    <a href="#" class="nav-desktop__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
+                    <a href="edit.html" class="nav-desktop__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
                 </div>
             </nav>
         </div>
@@ -277,7 +277,6 @@
                     </div>
                 </div>
             </section>
-
         </div>
     </main>
 
@@ -286,6 +285,7 @@
 
 
     <script src="dist/js/main.min.js"></script>
+    <script src="dist/js/dashboard.min.js"></script>
 </body>
 
 </html>
