--- a/wallet.html
+++ b/wallet.html
@@ -32,7 +32,7 @@
                     <a href="favorite.html" class="nav-mobile__list-item"><i class="fa-solid fa-heart"></i>Favorite</a>
                     <a href="compare.html" class="nav-mobile__list-item"><i
                             class="fa-solid fa-not-equal"></i>Compare</a>
-                    <a href="#" class="nav-mobile__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
+                    <a href="edit.html" class="nav-mobile__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
                 </div>
             </nav>
         </div>
@@ -52,7 +52,7 @@
                     <a href="favorite.html" class="nav-desktop__list-item"><i class="fa-solid fa-heart"></i>Favorite</a>
                     <a href="compare.html" class="nav-desktop__list-item"><i
                             class="fa-solid fa-not-equal"></i>Compare</a>
-                    <a href="#" class="nav-desktop__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
+                    <a href="edit.html" class="nav-desktop__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
                 </div>
             </nav>
         </div>
@@ -70,7 +70,7 @@
                         <p class="wallet__grid-text bold earning-lose">E/L</p>
                         <p class="wallet__grid-text bold earning-lose-percentage">E/L %</p>
                     </div>
-                    <div class="wallet__grid">
+                    <!-- <div class="wallet__grid">
                         <p class="wallet__grid-text product">ASBISc Enterprises </p>
                         <p class="wallet__grid-text quantity">104</p>
                         <p class="wallet__grid-text value">1120 PLN</p>
@@ -78,25 +78,7 @@
                         <p class="wallet__grid-text current-price">13,29</p>
                         <p class="wallet__grid-text earning-lose plus-color">+10,30</p>
                         <p class="wallet__grid-text earning-lose-percentage plus-color">+3,44%</p>
-                    </div>
-                    <div class="wallet__grid">
-                        <p class="wallet__grid-text product">ASBISc Enterprises </p>
-                        <p class="wallet__grid-text quantity">104</p>
-                        <p class="wallet__grid-text value">1120 PLN</p>
-                        <p class="wallet__grid-text purchase-price">12,20</p>
-                        <p class="wallet__grid-text current-price">13,29</p>
-                        <p class="wallet__grid-text earning-lose plus-color">+10,30</p>
-                        <p class="wallet__grid-text earning-lose-percentage plus-color">+3,44%</p>
-                    </div>
-                    <div class="wallet__grid">
-                        <p class="wallet__grid-text product">ASBISc Enterprises </p>
-                        <p class="wallet__grid-text quantity">104</p>
-                        <p class="wallet__grid-text value">1120 PLN</p>
-                        <p class="wallet__grid-text purchase-price">12,20</p>
-                        <p class="wallet__grid-text current-price">13,29</p>
-                        <p class="wallet__grid-text earning-lose plus-color">+10,30</p>
-                        <p class="wallet__grid-text earning-lose-percentage plus-color">+3,44%</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -109,6 +91,7 @@
 
 
     <script src="dist/js/main.min.js"></script>
+    <script src="dist/js/wallet.min.js"></script>
 </body>
 
 </html>
