--- a/favorite.html
+++ b/favorite.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>STOCK APP</title>
     <link rel="stylesheet" href="dist/css/main.min.css">
     <link rel="stylesheet" href="dist/css/favorite.min.css">
     <script src="https://kit.fontawesome.com/7689eee82e.js" crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
 <body>
     <header class="header">
         <div class="wrapper">
-            <a href="#" class="header__logo">
+            <a href="index.html" class="header__logo">
                 <i class="fa-solid fa-arrow-trend-up"></i>
                 <h1>MyStocksWatch</h1>
             </a>
@@ -30,8 +30,8 @@
                     <a href="index.html" class="nav-mobile__list-item"><i class="fa-solid fa-house"></i>Dashboard</a>
                     <a href="wallet.html" class="nav-mobile__list-item"><i class="fa-solid fa-wallet"></i>My Wallet</a>
                     <a href="favorite.html" class="nav-mobile__list-item"><i class="fa-solid fa-heart"></i>Favorite</a>
-                    <a href="compare.html" class="nav-mobile__list-item"><i
-                            class="fa-solid fa-not-equal"></i>Compare</a>
+                    <a href="indexes.html" class="nav-mobile__list-item"><i
+                            class="fa-solid fa-chart-column"></i>Indexes</a>
                     <a href="edit.html" class="nav-mobile__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
                 </div>
             </nav>
@@ -41,23 +41,23 @@
     <main class="main">
 
         <div class="left-column">
-            <div class="left-column__logo">
+            <a href="index.html" class="left-column__logo">
                 <i class="fa-solid fa-arrow-trend-up"></i>
                 <h1>MyStocksWatch</h1>
-            </div>
+            </a>
             <nav class="nav-desktop">
                 <div class="nav-desktop__list">
                     <a href="index.html" class="nav-desktop__list-item"><i class="fa-solid fa-house"></i>Dashboard</a>
                     <a href="wallet.html" class="nav-desktop__list-item"><i class="fa-solid fa-wallet"></i>My Wallet</a>
                     <a href="favorite.html" class="nav-desktop__list-item"><i class="fa-solid fa-heart"></i>Favorite</a>
-                    <a href="compare.html" class="nav-desktop__list-item"><i
-                            class="fa-solid fa-not-equal"></i>Compare</a>
+                    <a href="indexes.html" class="nav-desktop__list-item"><i
+                            class="fa-solid fa-chart-column"></i>Indexes</a>
                     <a href="edit.html" class="nav-desktop__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
                 </div>
             </nav>
         </div>
 
-        <div class="right-column">
+        <div class="center-column">
             <div class="favorite">
                 <div class="favorite__top">
                     <h3 class="section-heading">Favorites</h3>
