--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>STOCK APP</title>
     <link rel="stylesheet" href="dist/css/main.min.css">
     <script src="https://kit.fontawesome.com/7689eee82e.js" crossorigin="anonymous"></script>
 
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <div class="wrapper">
-            <a href="#" class="header__logo">
+            <a href="index.html" class="header__logo">
                 <i class="fa-solid fa-arrow-trend-up"></i>
                 <h1>MyStocksWatch</h1>
             </a>
@@ -29,8 +29,8 @@
                     <a href="index.html" class="nav-mobile__list-item"><i class="fa-solid fa-house"></i>Dashboard</a>
                     <a href="wallet.html" class="nav-mobile__list-item"><i class="fa-solid fa-wallet"></i>My Wallet</a>
                     <a href="favorite.html" class="nav-mobile__list-item"><i class="fa-solid fa-heart"></i>Favorite</a>
-                    <a href="compare.html" class="nav-mobile__list-item"><i
-                            class="fa-solid fa-not-equal"></i>Compare</a>
+                    <a href="indexes.html" class="nav-mobile__list-item"><i
+                            class="fa-solid fa-chart-column"></i>Indexes</a>
                     <a href="edit.html" class="nav-mobile__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
                 </div>
             </nav>
@@ -40,17 +40,17 @@
     <main class="main">
 
         <div class="left-column">
-            <div class="left-column__logo">
+            <a href="index.html" class="left-column__logo">
                 <i class="fa-solid fa-arrow-trend-up"></i>
                 <h1>MyStocksWatch</h1>
-            </div>
+            </a>
             <nav class="nav-desktop">
                 <div class="nav-desktop__list">
                     <a href="index.html" class="nav-desktop__list-item"><i class="fa-solid fa-house"></i>Dashboard</a>
                     <a href="wallet.html" class="nav-desktop__list-item"><i class="fa-solid fa-wallet"></i>My Wallet</a>
                     <a href="favorite.html" class="nav-desktop__list-item"><i class="fa-solid fa-heart"></i>Favorite</a>
-                    <a href="compare.html" class="nav-desktop__list-item"><i
-                            class="fa-solid fa-not-equal"></i>Compare</a>
+                    <a href="indexes.html" class="nav-desktop__list-item"><i
+                            class="fa-solid fa-chart-column"></i>Indexes</a>
                     <a href="edit.html" class="nav-desktop__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
                 </div>
             </nav>
@@ -66,156 +66,34 @@
                         <h4 class="balance__total-heading">Total Balance</h3>
                             <div class="balance__currency">
                                 <div class="balance__currency-pln">
-                                    <span>EUR</span>
-                                    <p>10.100,11</p>
+                                    <span>PLN</span>
+                                    <p>0</p>
                                 </div>
                                 <div class="balance__currency-eur">
-                                    <span>PLN</span>
-                                    <p>1.100,11</p>
+                                    <span>EUR</span>
+                                    <p>0</p>
                                 </div>
                                 <div class="balance__currency-usd">
                                     <span>USD</span>
-                                    <p>2.100,11</p>
+                                    <p>0</p>
                                 </div>
                             </div>
                     </div>
                 </div>
             </section>
-            <section class="changes">
-                <h3 class="section-heading">Changes</h3>
-                <div class="changes__boxes">
-                    <div class="changes__box">
-                        <div class="changes__box-top">
-                            <img src="dist/img/changes1.png" alt="">
-                            <span>1D</span>
-                        </div>
-                        <p class="changes__box-bottom">+1,21%</p>
-                    </div>
-                    <div class="changes__box">
-                        <div class="changes__box-top">
-                            <img src="dist/img/changes2.png" alt="">
-                            <span>5D</span>
-                        </div>
-                        <p class="changes__box-bottom">+5,11%</p>
-                    </div>
-                    <div class="changes__box">
-                        <div class="changes__box-top">
-                            <img src="dist/img/changes3.png" alt="">
-                            <span>1M<D></span>
-                        </div>
-                        <p class="changes__box-bottom">+11,91%</p>
-                    </div>
-                    <div class="changes__box">
-                        <div class="changes__box-top">
-                            <img src="dist/img/changes4.png" alt="">
-                            <span>6D</span>
-                        </div>
-                        <p class="changes__box-bottom">+20,21%</p>
-                    </div>
-                </div>
-            </section>
-            <section class="summary">
-                <h3 class="section-heading">Summary</h3>
-                <div class="summary__boxes">
-                    <div class="summary__box">
-                        <div class="summary__box-text">
-                            <p>Amount invested:</p>
-                            <span>5.000 PLN</span>
-                        </div>
-                        <div class="summary__box-text">
-                            <p>Total profit:</p>
-                            <span>500 PLN</span>
-                        </div>
-                        <div class="summary__box-text">
-                            <p>Total profit 19%:</p>
-                            <span>400 PLN</span>
-                        </div>
-                    </div>
-                    <div class="summary__box">
-                        <img src="dist/img/blue-arrow.png" alt="">
-                    </div>
-                    <div class="summary__box">
-                        <h3>Total profit in %:</h3>
-                        <h4>+5,11%</h4>
-                    </div>
-                    <div class="summary__box">
-                        <h3>Total profit in % -19%:</h3>
-                        <h4>+2,11%</h4>
-                    </div>
-                </div>
-            </section>
-
-        </div>
-
-        <div class="right-column">
 
             <section class="stocks">
                 <div class="stocks__top">
                     <h3 class="section-heading">My stocks</h3>
-                    <a href="#" class="stocks__top-text">See extended view</a>
+                    <a href="wallet.html" class="stocks__top-text">See extended view</a>
                 </div>
                 <div class="stocks__boxes">
-                    <div class="stocks__box">
-                        <div class="stocks__box-name">
-                            <p>ASBISc Enterprises PLC</p>
-                            <span>WSE</span>
-                        </div>
-                        <p class="stocks__box-percentage plus-color">+3,44%</p>
-                        <div class="stocks__box-price">
-                            <p>12,20 PLN</p>
-                            <span>1.268,80 PLN</span>
-                        </div>
-                    </div>
-                    <div class="stocks__box">
-                        <div class="stocks__box-name">
-                            <p>Bunge Limited</p>
-                            <span>NYSE</span>
-                        </div>
-                        <p class="stocks__box-percentage plus-color">+1,12%</p>
-                        <div class="stocks__box-price">
-                            <p>112,99 $</p>
-                            <span>225,98 $</span>
-                        </div>
-                    </div>
-                    <div class="stocks__box">
-                        <div class="stocks__box-name">
-                            <p>Energy Fuels Inc</p>
-                            <span>ASE</span>
-                        </div>
-                        <p class="stocks__box-percentage minus-color">-2,76%</p>
-                        <div class="stocks__box-price">
-                            <p>6,56 $</p>
-                            <span>196,80 $</span>
-                        </div>
-                    </div>
-                    <div class="stocks__box">
-                        <div class="stocks__box-name">
-                            <p>Sibanye Stillwater Ltd</p>
-                            <span>WSE</span>
-                        </div>
-                        <p class="stocks__box-percentage minus-color">-0,14%</p>
-                        <div class="stocks__box-price">
-                            <p>12,66 $</p>
-                            <span>240,54$</span>
-                        </div>
-                    </div>
-                    <div class="stocks__box">
-                        <div class="stocks__box-name">
-                            <p>ASBISc Enterprises PLC</p>
-                            <span>WSE</span>
-                        </div>
-                        <p class="stocks__box-percentage plus-color">+3,44%</p>
-                        <div class="stocks__box-price">
-                            <p>12,20 PLN</p>
-                            <span>1.268,80 PLN</span>
-                        </div>
-                    </div>
                 </div>
             </section>
             <section class="currency">
                 <h3 class="section-heading">Currency</h3>
                 <div class="currency__boxes">
-                    <div class="currency__box">
+                    <div class="currency__box" data-symbol="EURPLN=X">
                         <div class="currency__box-icons">
                             <img src="dist/img/eu.png" alt="">
                             <img src="dist/img/pl.png" alt="">
@@ -227,10 +105,10 @@
                             0,00%
                         </div>
                         <div class="currency__box-rate" data-currency1="eur" data-currency2="pln">
-                            4,4890
+                            0,0000
                         </div>
                     </div>
-                    <div class="currency__box">
+                    <div class="currency__box" data-symbol="PLN=X">
                         <div class="currency__box-icons">
                             <img src="dist/img/usa.png" alt="">
                             <img src="dist/img/pl.png" alt="">
@@ -242,10 +120,10 @@
                             0,00%
                         </div>
                         <div class="currency__box-rate" data-currency1="usd" data-currency2="pln">
-                            4,3890
+                            0,0000
                         </div>
                     </div>
-                    <div class="currency__box">
+                    <div class="currency__box" data-symbol="GBPPLN=X">
                         <div class="currency__box-icons">
                             <img src="dist/img/uk.png" alt="">
                             <img src="dist/img/pl.png" alt="">
@@ -257,10 +135,10 @@
                             0,00%
                         </div>
                         <div class="currency__box-rate" data-currency1="gbp" data-currency2="pln">
-                            4,2890
+                            0,0000
                         </div>
                     </div>
-                    <div class="currency__box">
+                    <div class="currency__box" data-symbol="EUR=X">
                         <div class="currency__box-icons">
                             <img src="dist/img/usa.png" alt="">
                             <img src="dist/img/eu.png" alt="">
@@ -272,18 +150,17 @@
                             0,00%
                         </div>
                         <div class="currency__box-rate" data-currency1="usd" data-currency2="eur">
-                            4,1890
+                            0,0000
                         </div>
                     </div>
                 </div>
             </section>
+
+        </div>
+
+        <div class="right-column">
         </div>
     </main>
-
-
-
-
-
     <script src="dist/js/main.min.js"></script>
     <script src="dist/js/dashboard.min.js"></script>
 </body>
