--- a/wallet.html
+++ b/wallet.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>STOCK APP</title>
     <link rel="stylesheet" href="dist/css/main.min.css">
     <link rel="stylesheet" href="dist/css/wallet.min.css">
     <script src="https://kit.fontawesome.com/7689eee82e.js" crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
 <body>
     <header class="header">
         <div class="wrapper">
-            <a href="#" class="header__logo">
+            <a href="index.html" class="header__logo">
                 <i class="fa-solid fa-arrow-trend-up"></i>
                 <h1>MyStocksWatch</h1>
             </a>
@@ -30,8 +30,8 @@
                     <a href="index.html" class="nav-mobile__list-item"><i class="fa-solid fa-house"></i>Dashboard</a>
                     <a href="wallet.html" class="nav-mobile__list-item"><i class="fa-solid fa-wallet"></i>My Wallet</a>
                     <a href="favorite.html" class="nav-mobile__list-item"><i class="fa-solid fa-heart"></i>Favorite</a>
-                    <a href="compare.html" class="nav-mobile__list-item"><i
-                            class="fa-solid fa-not-equal"></i>Compare</a>
+                    <a href="indexes.html" class="nav-mobile__list-item"><i
+                            class="fa-solid fa-chart-column"></i>Indexes</a>
                     <a href="edit.html" class="nav-mobile__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
                 </div>
             </nav>
@@ -41,23 +41,23 @@
     <main class="main">
 
         <div class="left-column">
-            <div class="left-column__logo">
+            <a href="index.html" class="left-column__logo">
                 <i class="fa-solid fa-arrow-trend-up"></i>
                 <h1>MyStocksWatch</h1>
-            </div>
+            </a>
             <nav class="nav-desktop">
                 <div class="nav-desktop__list">
                     <a href="index.html" class="nav-desktop__list-item"><i class="fa-solid fa-house"></i>Dashboard</a>
                     <a href="wallet.html" class="nav-desktop__list-item"><i class="fa-solid fa-wallet"></i>My Wallet</a>
                     <a href="favorite.html" class="nav-desktop__list-item"><i class="fa-solid fa-heart"></i>Favorite</a>
-                    <a href="compare.html" class="nav-desktop__list-item"><i
-                            class="fa-solid fa-not-equal"></i>Compare</a>
+                    <a href="indexes.html" class="nav-desktop__list-item"><i
+                            class="fa-solid fa-chart-column"></i>Indexes</a>
                     <a href="edit.html" class="nav-desktop__list-item"><i class="fa-solid fa-gear"></i>Edit Wallet</a>
                 </div>
             </nav>
         </div>
 
-        <div class="right-column">
+        <div class="center-column">
             <div class="wallet">
                 <h3 class="section-heading">My Wallet</h3>
                 <div class="wallet__stocks">
@@ -70,15 +70,6 @@
                         <p class="wallet__grid-text bold earning-lose">E/L</p>
                         <p class="wallet__grid-text bold earning-lose-percentage">E/L %</p>
                     </div>
-                    <!-- <div class="wallet__grid">
-                        <p class="wallet__grid-text product">ASBISc Enterprises </p>
-                        <p class="wallet__grid-text quantity">104</p>
-                        <p class="wallet__grid-text value">1120 PLN</p>
-                        <p class="wallet__grid-text purchase-price">12,20</p>
-                        <p class="wallet__grid-text current-price">13,29</p>
-                        <p class="wallet__grid-text earning-lose plus-color">+10,30</p>
-                        <p class="wallet__grid-text earning-lose-percentage plus-color">+3,44%</p>
-                    </div> -->
                 </div>
             </div>
 
