--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
     </main>
     <script src="dist/js/main.min.js"></script>
-    <script src="dist/js/dashboard.min.js"></script>
+    <script src="dist/js/dashboard.min.js" type="module"></script>
 </body>
 
 </html>
