--- a/edit.html
+++ b/edit.html
@@ -106,7 +106,7 @@
 
 
     <script src="dist/js/main.min.js"></script>
-    <script src="dist/js/edit.min.js"></script>
+    <script src="dist/js/edit.min.js" type="module"></script>
 </body>
 
 </html>
