--- a/favorite.html
+++ b/favorite.html
@@ -91,7 +91,7 @@
 
 
     <script src="dist/js/main.min.js"></script>
-    <script src="dist/js/favorite.min.js"></script>
+    <script src="dist/js/favorite.min.js" type="module"></script>
 </body>
 
 </html>
