--- a/indexes.html
+++ b/indexes.html
@@ -134,7 +134,7 @@
 
 
     <script src="dist/js/main.min.js"></script>
-    <script src="dist/js/indexes.min.js"></script>
+    <script src="dist/js/indexes.min.js" type="module"></script>
 </body>
 
 </html>
