--- a/wallet.html
+++ b/wallet.html
@@ -82,7 +82,7 @@
 
 
     <script src="dist/js/main.min.js"></script>
-    <script src="dist/js/wallet.min.js"></script>
+    <script src="dist/js/wallet.min.js" type="module"></script>
 </body>
 
 </html>
