--- a/edit.html
+++ b/edit.html
@@ -81,8 +81,7 @@
                 </div>
                 <div class="edit__sale">
                     <h4 class="edit__sale-heading">Add sales transactions</h3>
-                        <select class="edit__sale-stocks" name="" id="" placeholder='Select stocks to sell'
-                            onchange="selectValue()">
+                        <select class="edit__sale-stocks" name="" id="" placeholder='Select stocks to sell'>
                             <option value="-">--</option>
                         </select>
                         <input class="edit__sale-price" type="number" placeholder='Enter the selling price'>
