--- a/favorite.html
+++ b/favorite.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="dist/css/favorite.min.css">
     <script src="https://kit.fontawesome.com/7689eee82e.js" crossorigin="anonymous"></script>
 
+    <link rel="icon" type="image/png" sizes="32x32" href="dist/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="dist/img/favicon-16x16.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
